<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KXOJ</string>

    <string name="alert_ask_to_exit">Do you want to exit?</string>
    <string name="alert_loading">Please wait...</string>

    <!-- String Resources for Web Screen -->
    <string name="Concerts">Concerts</string>

    <!-- String Resources for Alarm Screen -->
    <string name="alarm_screen_title">Wake Up to Bristol Beat</string>
    <string name="Current_Time">Current Time</string>
    <string name="Set_Wake_Up_Time">Set Wake Up Time</string>
    <string name="alarm_note">After setting the time on this screen,
        change the volume as desired then stop the stream.
        You must leave the app open for the alarm to work.</string>
    <string name="Set_Alarm">Set Alarm</string>
    <string name="Cancel_Alarm">Cancel Alarm</string>

    <!-- String Resources for Social Page -->
    <string name="Social">Social</string>

    <!-- String Resource for Shout Out Page -->
    <string name="shout_out">Shout Out</string>
    <string name="Listen_To_An_Example">Listen To An Example</string>
    <string name="Record_Your_Voice">Record Your Voice</string>
    <string name="Stop_Recording">Stop Recording</string>
    <string name="Preview_Your_Recording">Preview Your Recording</string>
    <string name="Send_It_In">Send It In !</string>
    <string name="Thanks_for_sharing">Thanks for sharing! Listen to KXOJ
        and you might hear yourself on the radio!</string>

    <!-- Strings for Stations Page -->
    <string name="Stations">Stations</string>
    <string name="Play">Play</string>
    <string name="Playing">Playing</string>

    <!-- String Resource for Recent Playlist Page -->
    <string name="Recent_Playlist">Recent Playlist</string>
</resources>