<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_grey_textures"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:background="@color/actionbar_tint_color"
        android:gravity="center"
        android:text="@string/shout_out"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_shoutout_logo" />

        <ProgressBar
            android:id="@+id/prgLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnListen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_normal"
            android:text="@string/Listen_To_An_Example"
            android:textColor="@color/global_tint_color" />

        <Button
            android:id="@+id/btnRecord"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_normal"
            android:tag="0"
            android:text="@string/Record_Your_Voice"
            android:textColor="@color/global_tint_color" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_normal"
            android:text="@string/Preview_Your_Recording"
            android:textColor="@color/global_tint_color" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_normal"
            android:text="@string/Send_It_In"
            android:textColor="@color/global_tint_color" />
    </LinearLayout>
</LinearLayout>