<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_grey_textures">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:background="@color/actionbar_tint_color"
        android:gravity="center"
        android:text="@string/alarm_screen_title"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lblTitle"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/content_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Current_Time"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/content_padding">

            <TextView
                android:id="@+id/tvCurH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_alarm_item"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:textColor="@color/global_tint_color"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCurH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_alarm_item"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:textColor="@color/global_tint_color"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_alarm_item"
                android:gravity="center"
                android:padding="4dp"
                android:text=":"
                android:textColor="@color/global_tint_color"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCurM1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_alarm_item"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:textColor="@color/global_tint_color"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCurM2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_alarm_item"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:textColor="@color/global_tint_color"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Set_Wake_Up_Time"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.9"
            android:timePickerMode="spinner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding"
            android:gravity="center"
            android:text="@string/alarm_note"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSet"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/content_padding"
            android:background="@drawable/btn_set_alarm"
            android:tag="0"
            android:text="@string/Set_Alarm"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>